--- a/Omicx.QA/Omicx.QA.csproj
+++ b/Omicx.QA/Omicx.QA.csproj
@@ -99,4 +99,8 @@
     <Content Remove="$(UserProfile)\.nuget\packages\*\*\contentFiles\any\*\*.abppkg*" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Omicx.QA.Elasticsearch\Omicx.QA.Elasticsearch.csproj" />
+  </ItemGroup>
+
 </Project>
