commit config map tenant, config elasicsearch

--- a/Omicx.QA/appsettings.json
+++ b/Omicx.QA/appsettings.json
@@ -1,5 +1,6 @@
 {
   "App": {
+    "Multitenancy": true,
     "SelfUrl": "https://localhost:44331",
     "ClientUrl": "http://localhost:4200",
     "CorsOrigins": "https://*.QA.com,http://localhost:4200",
@@ -31,6 +32,9 @@
   "Elasticsearch": {
     "ConnectionStrings": "http://192.168.13.60:9200",
     "Username": "elastic",
-    "Password": "Omicx@143652"
+    "Password": "Omicx@143652",
+    "Indices": [
+      "todo-items"
+    ]
   }
 }
