--- a/Omicx.QA.Elasticsearch/Omicx.QA.Elasticsearch.csproj
+++ b/Omicx.QA.Elasticsearch/Omicx.QA.Elasticsearch.csproj
@@ -8,6 +8,8 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="13.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.0" />
       <PackageReference Include="NEST" Version="7.17.5" />
       <PackageReference Include="NEST.JsonNetSerializer" Version="7.17.5" />
       <PackageReference Include="Volo.Abp" Version="9.0.1" />
