--- a/Omicx.QA/appsettings.json
+++ b/Omicx.QA/appsettings.json
@@ -36,5 +36,39 @@
     "Indices": [
       "todo-items"
     ]
+  },
+  "kafka": {
+    "admin": {
+      "bootstrapServers": "168.2.55.54:9094",
+      "securityProtocol": "SaslPlaintext",
+      "saslMechanism": "Plain",
+      "saslUsername": "user",
+      "saslPassword": "bitnami"
+    },
+    "consumer": {
+      "clientId": "CRM-SYNC",
+      "bootstrapServers": "168.2.55.54:9094",
+      "groupId": "omicxSyncWorker",
+      "securityProtocol": "SaslPlaintext",
+      "saslMechanism": "Plain",
+      "saslUsername": "user",
+      "saslPassword": "bitnami",
+      "enableAutoCommit": false,
+      "sessionTimeoutMs": 30000,
+      "autoOffsetReset": "earliest"
+    },
+    "producer": {
+      "bootstrapServers": "168.2.55.54:9094",
+      "securityProtocol": "SaslPlaintext",
+      "saslMechanism": "Plain",
+      "saslUsername": "user",
+      "saslPassword": "bitnami"
+    },
+    "schemaRegistry": {
+      "url": "http://192.168.13.135:8081/"
+    },
+    "topics": [
+      
+    ]
   }
 }
