--- a/Omicx.QA/Omicx.QA.csproj
+++ b/Omicx.QA/Omicx.QA.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Confluent.Kafka" Version="2.6.1" />
+    <PackageReference Include="Confluent.SchemaRegistry.Serdes.Json" Version="2.6.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="9.0.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.2" />
     <PackageReference Include="Serilog.Sinks.Async" Version="2.0.0" />
@@ -113,6 +114,10 @@
     <Reference Include="CrmCloud.Kafka.Abp">
       <HintPath>..\packages\CrmCloud.Kafka.Abp.dll</HintPath>
     </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Services\EmailReceived\" />
   </ItemGroup>
 
 </Project>
